--- a/css/styles.css
+++ b/css/styles.css
@@ -544,6 +544,65 @@ font-family: 'Oswald', sans-serif; */
     grid-template-columns: repeat(1, 1fr);
   }
 }
+.contacts {
+  padding: 100px 0 150px;
+}
+.text__h2 {
+}
+.contacts__h2 {
+  text-align: center;
+  margin-bottom: 60px;
+}
+.contacts__grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+  justify-items: center;
+  justify-content: center;
+}
+.contacts__item {
+  max-width: 255px;
+}
+.contact__img {
+}
+.contact__name {
+  margin-bottom: 25px;
+  text-align: center;
+  font-size: 24px;
+  color: var(--gray-color);
+}
+.text__h3 {
+}
+.contact__text {
+  text-align: center;
+}
+.email__link {
+  color: #F7654A;
+}
+.contact__img-logo {
+  width: 71px;
+  height: 29px;
+  margin: 0 auto;
+  margin-bottom: 35px;
+}
+
+@media screen and (max-width: 1280px) {
+  .contacts__grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .contacts__item {
+    margin-bottom: 40px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .contacts__grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .contacts__item {
+    max-width: 100%;
+    margin-bottom: 40px;
+  }
+}
 
 
 
